--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+  height: 100vh;
+}
+
 body{
   margin: 0;
   padding: 0;
@@ -5,7 +9,6 @@ body{
   background: url(https://i.imgur.com/b9r5sEL.jpg) top left no-repeat;
   background-size: cover;
   font-size: 10px;
-  min-height: 100vh;
 }
 
 .keys {
